added echart binding

--- a/addon/styles/addon.scss
+++ b/addon/styles/addon.scss
@@ -8,3 +8,4 @@
 @import './frost-chart-svg-plot-scatter';
 @import './frost-chart-svg-plot-grid';
 @import './frost-gauge';
+@import './frost-echart';
