--- a/tests/dummy/app/styles/app.scss
+++ b/tests/dummy/app/styles/app.scss
@@ -1,12 +1,22 @@
 @import 'node_modules/ember-frost-core/addon/styles/frost-theme';
 @import 'node_modules/ember-frost-core/addon/styles/frost-app';
 
+.aqi-chart {
+  height: 400px;
+  width: 100%;
+}
+
+.bar-chart-1 {
+  height: 400px;
+  width: 100%;
+}
+
 .demo-body {
   display: flex;
   flex-direction: column;
   position: relative;
   padding: 10px;
-  height: 100%;
+  height: 360%;
 }
 
 .demo-full {
@@ -18,6 +28,14 @@
   display: flex;
   flex-direction: row;
   flex: 1;
+}
+
+.echart-demo-row {
+  display: flex;
+  flex-direction: row;
+  flex: 2;
+  overflow: scroll;
+  height: 1000px;
 }
 
 .demo-flex {
